# dezbee-rest

./: .gitignore  .pdm.toml  LICENSE  README.md  app.py  app2.py  main-test.py  package.json  pyproject-pdm.toml  pyproject-save.toml  pyproject.toml  requirements.txt  run-dev.bat  run-uvicorn.bat  sanic-app.py  start-dezrest.bat
.github/workflows/: routine-tests-backup.yml-  routine-tests.yml
dezrest/: __init__.py  __main__.py  dezrest.py  sanic__main__has-problem-with-ezbee.py-
tests/: test_dezrest.py
