[tool.poetry]
name = "dezrest"
version = "0.1.0"
description = "serve ez/dz/de bee via FastAPI rest"
authors = ["ffreemt <yucongo+fmt@gmail.com>"]
readme = "README.md"
packages = [{include = "dezbee_rest"}]

[tool.poetry.dependencies]
python = "^3.8.3"
sanic = "^22.9.1"
logzero = "^1.7.0"
pybind11 = "^2.10.1"
scikit-learn = "^1.2.0"
set-loglevel = "^0.1.2"
fasttext = [{url = "https://github.com/ffreemt/ezbee/raw/main/data/artifects/fasttext-0.9.2-cp38-cp38-win_amd64.whl", markers = "sys_platform == 'win32'"}, {markers = "sys_platform == 'linux'"}]
pycld2 = [{url = "https://github.com/ffreemt/ezbee/raw/main/data/artifects/pycld2-0.41-cp38-cp38-win_amd64.whl", markers = "sys_platform == 'win32'"}, {markers = "sys_platform == 'linux'"}]
pyicu = [{url = "https://github.com/ffreemt/ezbee/raw/main/data/artifects/PyICU-2.8.1-cp38-cp38-win_amd64.whl", markers = "sys_platform == 'win32'"}, {markers = "sys_platform == 'linux'"}]
pyicu = [{url = "https://github.com/ffreemt/ezbee/blob/main/data/artifects/polyglot-16.7.4.tar.gz"}]
ezbee = "^0.1.2"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
